service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zad2-service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30000
  selector:
    app: zad2-app
